feat: add public_id to tickets and update related logic
- introduce `public_id` attribute to `ticket` for unique identification
- update `ordercompletedemailnotifier` to handle new ticket logic
- refactor `mylive.tickets` to load events and tickets efficiently
- modify ticket links in `order_completed.html.heex` for better navigation
- remove unused `mylive` module to clean up codebase
- add new `ticketlive` module for displaying ticket details
- create migration for adding `public_id` to the tickets table

--- a/lib/gits_web/controllers/email_html/order_completed.html.heex
+++ b/lib/gits_web/controllers/email_html/order_completed.html.heex
@@ -106,7 +106,7 @@
                   <td style="display: flex; gap: 24px; padding-top: 40px">
                     <div>
                       <a
-                        href={url(GitsWeb.Endpoint, ~p"/my/tickets")}
+                        href={url(GitsWeb.Endpoint, ~p"/my/tickets?order_no=#{@order_no}")}
                         style="margin: 0 0 24px; display: inline-block; border-radius: 8px; background-color: #09090b; padding: 8px 16px; font-size: 14px; font-weight: 600; color: #fafafa; text-decoration: none"
                         class="hover-bg-zinc-800"
                       >
@@ -123,7 +123,7 @@
                     </div>
                     <div>
                       <a
-                        href={url(GitsWeb.Endpoint, ~p"/my/refunds?order_no=#{@order_no}")}
+                        href={url(GitsWeb.Endpoint, ~p"/refund?order_no=#{@order_no}")}
                         style="margin: 0 0 24px; display: inline-block; border-radius: 8px; background-color: #fafafa; padding: 8px 16px; font-size: 14px; font-weight: 600; color: #09090b; text-decoration: none"
                         class="hover-bg-zinc-100"
                       >
