--- a/lib/gits_web/live/my_live/tickets.html.heex
+++ b/lib/gits_web/live/my_live/tickets.html.heex
@@ -1,100 +1,42 @@
-<h1 class="p-2 mx-auto max-w-screen-xl text-xl font-semibold">
+<h1 class="mx-auto max-w-screen-xl p-2 text-xl font-semibold">
   <%= @page_title %>
 </h1>
-<ul
-  role="list"
-  class="grid grid-cols-1 gap-x-6 gap-y-8 lg:grid-cols-3 xl:gap-x-8 mx-auto max-w-screen-xl p-2"
+
+<div
+  :for={{event_name, ticket_types} <- @events}
+  class="mx-auto flex max-w-screen-xl items-start gap-4 p-4 lg:gap-8"
 >
-  <li class="overflow-hidden rounded-xl border border-gray-200">
-    <div class="flex items-center gap-x-4 border-b border-gray-900/5 bg-gray-50 p-6">
-      <div class="h-12 aspect-[3/2] bg-white border rounded-md"></div>
-
-      <div class="text-sm/6 font-medium text-gray-900">General</div>
-      <div class="relative ml-auto">
-        <button
-          phx-click={JS.show(to: "div#my-ticket-menu")}
-          type="button"
-          class="-m-2.5 block p-2.5 text-gray-400 hover:text-gray-500"
-          id="options-menu-0-button"
-          aria-expanded="false"
-          aria-haspopup="true"
-        >
-          <span class="sr-only">Open options</span>
-          <svg
-            class="size-5"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-            data-slot="icon"
-          >
-            <path d="M3 10a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 10a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM15.5 8.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z" />
-          </svg>
-        </button>
-        <!--
-          Dropdown menu, show/hide based on menu state.
-
-          Entering: "transition ease-out duration-100"
-            From: "transform opacity-0 scale-95"
-            To: "transform opacity-100 scale-100"
-          Leaving: "transition ease-in duration-75"
-            From: "transform opacity-100 scale-100"
-            To: "transform opacity-0 scale-95"
-        -->
-        <div
-          class="absolute hidden right-0 z-10 mt-0.5 w-32 origin-top-right rounded-md bg-white py-2 shadow-lg ring-1 ring-gray-900/5 focus:outline-none"
-          id="my-ticket-menu"
-          role="menu"
-          aria-orientation="vertical"
-          aria-labelledby="options-menu-0-button"
-          tabindex="-1"
-        >
-          <!-- Active: "bg-gray-50 outline-none", Not Active: "" -->
-          <a
-            href={~p"/my/tickets/public-id"}
-            class="block px-3 py-1 text-sm/6 text-gray-900"
-            role="menuitem"
-            tabindex="-1"
-            id="options-menu-0-item-0"
-          >
-            View<span class="sr-only">, Tuple</span>
-          </a>
-          <a
-            href="#"
-            class="block px-3 py-1 text-sm/6 text-gray-900"
-            role="menuitem"
-            tabindex="-1"
-            id="options-menu-0-item-1"
-          >
-            Edit<span class="sr-only">, Tuple</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <dl class="-my-3 divide-y divide-gray-100 px-6 py-4 text-sm/6">
-      <div class="flex justify-between gap-x-4 py-3">
-        <dt class="text-gray-500">Event</dt>
-        <dd class="text-gray-700 truncate">
-          The Ultimate Cheese Festival the ultimate cheese festival
-        </dd>
-      </div>
-
-      <div :if={false} class="flex justify-between gap-x-4 py-3">
-        <dt class="text-gray-500">Last invoice</dt>
-        <dd class="text-gray-700"><time datetime="2022-12-13">December 13, 2022</time></dd>
-      </div>
-      <div :if={false} class="flex justify-between gap-x-4 py-3">
-        <dt class="text-gray-500">Amount</dt>
-        <dd class="flex items-start gap-x-2">
-          <div class="font-medium text-gray-900">$2,000.00</div>
-          <div class="rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-700 ring-1 ring-inset ring-red-600/10">
-            Overdue
+  <div class="grid pt-6 text-zinc-500 text-center">
+    <span class="text-3xl/6 font-semibold">00</span>
+    <span class=" text-xl/6">Xxx</span>
+  </div>
+  <div class="grid grow gap-2 lg:grid-cols-3 lg:gap-4">
+    <%= for {ticket_name, tickets} <- ticket_types do %>
+      <.link
+        :for={{id} <- tickets}
+        navigate={~p"/tickets/#{id}"}
+        class="grid gap-4 divide-y divide-dashed rounded-xl border p-6 ring-zinc-400 ring-offset-1 hover:ring-2"
+      >
+        <div class="w-full overflow-hidden">
+          <div class="flex">
+            <div class="grow">
+              <h2 class="truncate text-2xl/6 font-semibold"><%= ticket_name %></h2>
+              <span class="truncate text-sm/5 text-zinc-700">
+                <%= event_name %>
+              </span>
+            </div>
+            <span class="truncate text-sm/6 font-medium text-zinc-500">#<%= id %></span>
           </div>
-        </dd>
-      </div>
-    </dl>
-  </li>
-</ul>
-
-<.modal id="view-ticket" show={@live_action == :show}>
-  <h3 class="text-lg font-semibold"><%= @page_title %></h3>
-</.modal>
+          <div class="pt-4 flex items-center">
+            <span class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200">
+              <svg class="h-1.5 w-1.5 fill-zinc-900" viewBox="0 0 6 6" aria-hidden="true">
+                <circle cx="3" cy="3" r="3" />
+              </svg>
+              Active
+            </span>
+          </div>
+        </div>
+      </.link>
+    <% end %>
+  </div>
+</div>
