--- a/lib/gits_web/live/host_live/view_event.html.heex
+++ b/lib/gits_web/live/host_live/view_event.html.heex
@@ -27,82 +27,100 @@
   </div>
 </div>
 
+<div class="p-2 flex gap-4 lg:gap-4">
+  <div class="aspect-[3/2] rounded-lg bg-zinc-200 h-20"></div>
+  <div class="grid items-start gap-1">
+    <h1 class="font-semibold text-lg/5 inline-flex flex-wrap gap-1">
+      <%= @event.name %>
+    </h1>
+    <div class="flex flex-wrap items-center gap-2">
+      <.link
+        target="_blank"
+        class="flex rounded-lg text-zinc-500 border p-1 hover:text-zinc-950"
+        href={Routes.storefront_event_listing_path(@socket, :index, @event.public_id)}
+      >
+        <span class="sr-only">Open url</span>
+        <.icon name="i-lucide-link" class="text-sm" />
+      </.link>
+      <span class="text-xs/4 text-zinc-500">Created 25 Jun 2024</span>
+    </div>
+  </div>
+</div>
+
 <div class="grid lg:grid-cols-[24rem_1fr] gap-4 lg:gap-8">
   <div class="p-2">
     <div class="grid w-full rounded-xl border divide-y">
-      <div class="grid p-4 gap-4">
-        <div class="flex items-start gap-2">
-          <div class="aspect-[3/2] w-20 shrink-0 rounded-md bg-zinc-200"></div>
-          <div class="grow">
-            <span class="line-clamp-3 inline-flex gap-1 font-semibold">
-              <%= @event.name %>
-            </span>
-            <div class="w-full flex justify-end">
-              <.link
-                target="_blank"
-                class="flex rounded-lg text-zinc-500 hover:text-zinc-950"
-                href={Routes.storefront_event_listing_path(@socket, :index, @event.public_id)}
-              >
-                <span class="sr-only">Open url</span>
-                <.icon name="hero-link-mini" />
-              </.link>
-            </div>
+      <div class="w-full flex justify-end gap-1 p-4">
+        <.button
+          :if={not @event.published?}
+          phx-click={
+            JS.patch(
+              Routes.host_view_event_path(
+                @socket,
+                @live_action,
+                @host.handle,
+                @event.public_id,
+                %{publish: @event.public_id}
+              ),
+              replace: true
+            )
+            |> show_modal("publish-event")
+          }
+        >
+          <.icon name="i-lucide-rocket" />
+          <span>Publish</span>
+        </.button>
+        <div role="none" class="grow"></div>
+        <.button
+          variant={:ghost}
+          phx-click={
+            JS.navigate(
+              Routes.host_edit_event_path(@socket, :details, @host_handle, @event.public_id)
+            )
+          }
+        >
+          <.icon name="i-lucide-pen-line" />
+          <span class="">Edit</span>
+        </.button>
+        <.button
+          variant={:ghost}
+          phx-click={
+            JS.patch(
+              Routes.host_view_event_path(
+                @socket,
+                @live_action,
+                @host_handle,
+                @event.public_id,
+                %{
+                  archive: @event.public_id
+                }
+              ),
+              replace: true
+            )
+            |> show_modal("archive-event")
+          }
+        >
+          <.icon name="i-lucide-trash-2" />
+          <span class="">Archive</span>
+        </.button>
+      </div>
+      <div class="p-4">
+        <dl class="flex flex-wrap gap-2">
+          <div class="grid grid-cols-[theme(space.24)_1fr] w-full">
+            <dt class="flex-none">
+              <span class="text-sm/6 text-zinc-500">Starts at</span>
+            </dt>
+            <dd class="text-sm/6 gap-2 flex items-center">
+              <.icon name="i-lucide-calendar-days" />
+              <span>
+                <%= Calendar.strftime(
+                  @event.starts_at,
+                  "%d %B %Y, %I:%M %p"
+                ) %>
+              </span>
+            </dd>
           </div>
-        </div>
-        <div class="flex gap-4">
-          <button
-            :if={not @event.published?}
-            phx-click={
-              JS.patch(
-                Routes.host_view_event_path(
-                  @socket,
-                  @live_action,
-                  @host.handle,
-                  @event.public_id,
-                  %{publish: @event.public_id}
-                ),
-                replace: true
-              )
-              |> show_modal("publish-event")
-            }
-            class="h-9 gap-1 bg-zinc-950 rounded-lg inline-flex items-center text-white px-4 text-sm"
-          >
-            <.icon name="i-lucide-rocket" />
-            <span class="font-semibold">Publish</span>
-          </button>
-
-          <button
-            phx-click={
-              JS.navigate(
-                Routes.host_edit_event_path(@socket, :details, @host_handle, @event.public_id)
-              )
-            }
-            class="h-9 border gap-1 rounded-lg inline-flex items-center text-zinc-950 px-4 text-sm"
-          >
-            <span class="font-semibold">Edit</span>
-          </button>
-
-          <button
-            phx-click={
-              JS.patch(
-                Routes.host_view_event_path(
-                  @socket,
-                  @live_action,
-                  @host_handle,
-                  @event.public_id,
-                  %{
-                    archive: @event.public_id
-                  }
-                ),
-                replace: true
-              )
-              |> show_modal("archive-event")
-            }
-            class="h-9 border gap-1 rounded-lg inline-flex items-center text-red-500 px-4 text-sm"
-          >
-            <span class="font-semibold">Archive</span>
-          </button>
-        </div>
+        </dl>
       </div>
       <div class="p-4 grid grid-cols-3 divide-x">
         <div
