feat: add basic auth and new account resources
- introduce `basic_auth` configuration in `dev.exs` for testing.
- add `host` and `role` resources to `gits.accounts` module.
- create `artist`, `hostmember`, and `roletype` modules for future use.
- update `gitsweb.router` to use new `admin` pipeline with basic auth.
- remove outdated migration files and resource snapshots to clean up.

--- a/lib/gits_web/live/host_live/edit_event.html.heex
+++ b/lib/gits_web/live/host_live/edit_event.html.heex
@@ -11,10 +11,11 @@
     :for={
       {label, action} <- [
         {"Event Details", :details},
-        {"Tickets", :tickets}
+        {"Tickets", :tickets},
+        {"Payments", :tickets}
       ]
     }
-    class="group grid grow rounded-lg"
+    class="group grid w-full rounded-lg"
     aria-selected={"#{action == @live_action}"}
   >
     <div class="p-1">
